Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/bar/package-info.java
/* /nodynamiccopyright/ */

@java.lang.annotation.Documented
package bar;
